<resources>
    <string name="app_name">FamilyMap</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port: </string>
    <string name="user_name">User Name: </string>
    <string name="password">Password: </string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="title">TITLE</string>
    <string name="email">Email:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender: </string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="noMarkerMessage">Click on a marker to see event details</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="genderFilter">Filter events based on gender</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
